# jwconv

./: Cargo.toml  README.rst
cli/: Cargo.toml
cli/src/: cli.yml  main.rs
core/: Cargo.toml
core/src/: hiragana.rs  katakana.rs  lib.rs
ffi/: Cargo.toml
ffi/bindings/python/cffi/: jwconv.py
ffi/examples/: Makefile  taiwan  taiwan.c
ffi/include/: jwconv.h
ffi/src/: lib.rs
src/: lib.rs
