[package]
authors = ["Chiu-Hsiang Hsu <wdv4758h@gmail.com>"]
name = "jwconv"
version = "0.0.1"
license = "Apache-2.0"
description = "Japanese Writing System Converter"
repository = "https://github.com/wdv4758h/jwconv/"
keywords = ["japanese", "romaji", "hiragana"]

[dependencies]
lazy_static = "0.2.2"
