[package]
authors = ["Chiu-Hsiang Hsu <wdv4758h@gmail.com>"]
name = "jwconv-ffi"
version = "0.0.1"
license = "Apache-2.0"
description = "Japanese Writing System Converter (Library for FFI)"
repository = "https://github.com/wdv4758h/jwconv/"
keywords = ["japanese", "romaji", "hiragana", "ffi"]

[lib]
name = "jwconv"
crate-type = ["staticlib", "cdylib"]

[dependencies]
jwconv = { path = "../core" }
